--- a/views/front/profil.ejs
+++ b/views/front/profil.ejs
@@ -14,9 +14,10 @@
                                     <ion-icon name="camera" class="text-xl"></ion-icon>
                                 </div>
                             </div></td>
-                            <td style="width: 70vw;">
-                                <h3 class="text-lg font-semibold" style="color: crimson; text-align: right;">
-                                <span style="color:cornflowerblue;">BAĞIŞ YAP </span>| ABONE OL
+                            <td style="width: 65vw;">
+                                <h3 class="text-lg font-semibold"
+                                                    style=" text-align: right;"> <ion-icon style="margin-top: -2px;" class="text-2xl" name="chatbubble-outline"></ion-icon> | <span style="color: crimson;">ABONE OL</span> 
+                                                </h3>
                             </h3>
                         </td>
                         </tr>
@@ -36,7 +37,7 @@
                 <div class="flex justify-between lg:border-t flex-col-reverse lg:flex-row" style="padding-top: 10px;">
                     <nav class="cd-secondary-nav pl-2 is_ligh -mb-0.5 border-transparent">
                         <ul>
-                            <li class="active"><a href="#0"> Paylaşımlar</a></li>
+                            <li class="active"><a href="#0"> Raf</a></li>
                             <li><a href="#0">Yorumlar </a></li>
                             <li><a href="#0">Beğeniler </a></li>
                             <li><a href="#0">İstatistik </a></li>
@@ -65,24 +66,54 @@
                                             <div class="row" style="margin-top: -9px; margin-left: 1px;">
                                                 <table>
                                                     <tr>
-                                                        <td>
-                                                            <div class="flex items-center">
-                                                                <ion-icon name="share-social-outline"></ion-icon>
-                                                                <span class="text-sm">22</span>
-                                                            </div>
-                                                        </td>
-                                                        <td>
-                                                            <div class="flex items-center">
-                                                                <ion-icon style="padding-left: 20vw;" name="heart-outline"></ion-icon>
-                                                                <span class="text-sm">22</span>
-                                                            </div>
-                                                        </td>
-                                                        <td>
-                                                            <div class="flex items-center">
-                                                                <ion-icon style="padding-left: 20vw;" name="chatbubble-ellipses-outline"></ion-icon>
-                                                                <span class="text-sm"><%= element.comment.length %>11 </span>
-                                                            </div>
-                                                        </td>
+                                                        
+                                                    <td>
+                                                        <div class="flex items-center">
+                                                            <ion-icon name="logo-facebook"></ion-icon>
+                                                            <span class="text-sm"></span>
+                                                        </div>
+                                                    </td>
+                                                    <td>
+                                                        <div class="flex items-center">
+                                                            <ion-icon name="logo-whatsapp" style="padding-left: 7vw;"></ion-icon>
+                                                            <span class="text-sm"></span>
+                                                        </div>
+                                                    </td>
+                                                    <td>
+                                                        <div class="flex items-center">
+                                                            <ion-icon name="logo-twitter" style="padding-left: 7vw;"></ion-icon>
+                                                            <span class="text-sm"></span>
+                                                        </div>
+                                                    </td>
+                                                    <td>
+                                                        <div class="flex items-center">
+                                                            <ion-icon style="padding-left: 7vw;" 
+                                                                name="heart-outline"></ion-icon>
+                                                            <span class="text-sm"></span>
+                                                        </div>
+                                                    </td>
+                                                    <td>
+                                                        <div class="flex items-center">
+                                                            <ion-icon style="padding-left: 7vw;"  name="chatbubble-ellipses-outline"></ion-icon>
+
+                                                            <span class="text-sm"></span>
+                                                        </div>
+                                                    </td>
+                                                    <td>
+                                                        <div class="flex items-center">
+                                                            <b>
+                                                            <ion-icon  style="color:#03A9F4; font-weight:bolder; padding-left: 7vw;" name="checkmark-outline"></ion-icon>
+
+                                                            </b>
+                                                            <span class="text-sm"></span>
+                                                        </div>
+                                                    </td>
+                                                    <td>
+                                                        <div class="flex items-center">
+                                                            <ion-icon  style="padding-left: 7vw;" name="ellipsis-vertical"></ion-icon>
+                                                            <span class="text-sm"></span>
+                                                        </div>
+                                                    </td>
                                                     </tr>
                                                 </table>
                                         </div>                                        
