--- a/views/front/bildirim.ejs
+++ b/views/front/bildirim.ejs
@@ -1,10 +1,10 @@
 <% layout("layout") %>
     <div class="main_content">
-        <div class="mcontainer">
+        <br>
+        <div class="mcontainer" style="border: 1px solid #03A9F4; border-radius: 20px; margin:5px; height: 73vh;">
             <div class="bg-white rounded-2xl -mt-4"> 
                 <h3 class="text-lg font-semibold">Bildirimler</h3>
             </div>
-
             <div class="lg:flex lg:mt-8 mt-4 lg:space-x-8">
                 <div class="lg:w-12/12 space-y-6">
                     <ul class="space-y-6">
