--- a/views/front/bildirim.ejs
+++ b/views/front/bildirim.ejs
@@ -1,25 +1,25 @@
 <% layout("layout") %>
     <div class="main_content">
         <br>
-        <div class="mcontainer" style="border: 1px solid #03A9F4; border-radius: 20px; margin:5px; height: 73vh;">
-            <div class="bg-white rounded-2xl -mt-4"> 
+        <div class="mcontainer" style="border: 1px solid #03A9F4; border-radius: 20px; margin:5px;">
+            <!-- <div class="bg-white rounded-2xl -mt-4"> 
                 <h3 class="text-lg font-semibold">Bildirimler</h3>
-            </div>
+            </div> -->
             <div class="lg:flex lg:mt-8 mt-4 lg:space-x-8">
                 <div class="lg:w-12/12 space-y-6">
                     <ul class="space-y-6">
                             <li style="margin-top: 4px;">
                                 <a href="">
                                     <div class="flex items-start pl-3 space-x-4">
-                                        <img src="../../../front/images/avatars/avatar-2.jpg" style="width: 40px; height: 40px;" class="rounded-full">
+                                        <!-- <img src="../../../front/images/avatars/avatar-2.jpg" style="width: 40px; height: 40px;" class="rounded-full"> -->
                                         <div class="flex-1">
                                             <!-- <h3 class="text-lg font-semibold line-clamp-1"> -->
                                             <h3 class="text-lg font-semibold">
-                                                Konu bağlığı
+                                               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis quasi adipisci distinctio alias harum corrupti aut laudantium pariatur, culpa voluptatibus, dolorum repellat explicabo.
                                             </h3>
-                                            <p class="text-sm text-gray-400 mb-2"> Yazar: <span data-href="%40tag-dev.html">Abdullah Bektaş</span>
-                                            </p>
-                                            <div class="row" style="margin-top: -9px; margin-left: 1px;">
+                                            <!-- <p class="text-sm text-gray-400 mb-2"> Yazar: <span data-href="%40tag-dev.html">Abdullah Bektaş</span>
+                                            </p> -->
+                                            <!-- <div class="row" style="margin-top: -9px; margin-left: 1px;">
                                                 <table>
                                                     <tr>
                                                         
@@ -72,13 +72,13 @@
                                                     </td>
                                                     </tr>
                                                 </table>
-                                        </div>                                        
+                                        </div>                                         -->
                                     </div>
                                     </div>
                                     
                                 </a>
                             </li>
-                            <hr style="margin-top: -0px;">
+                            <!-- <hr style="margin-top: -0px;"> -->
                     </ul>
                 </div>
                 <!-- <div class="lg:w-5/12 space-y-6">
