--- a/views/front/bildirim.ejs
+++ b/views/front/bildirim.ejs
@@ -1,19 +1,24 @@
 <% layout("layout") %>
     <div class="main_content">
         <br>
-        <div class="mcontainer" style="border: 1px solid #03A9F4; border-radius: 20px; margin:5px;">
+        <div class="mcontainer" style="margin:5px;">
             <!-- <div class="bg-white rounded-2xl -mt-4"> 
                 <h3 class="text-lg font-semibold">Bildirimler</h3>
             </div> -->
             <div class="lg:flex lg:mt-8 mt-4 lg:space-x-8">
-                <div class="lg:w-12/12 space-y-6">
-                    <ul class="space-y-6">
-                            <li style="margin-top: 4px;">
+                <div class="lg:w-12/12 space-y-6" style="border: 1px solid #03A9F4; border-radius: 20px; padding: 5px">
+                    <ul class="space-y-6" >
+                            <li>
                                 <a href="">
                                     <div class="flex items-start pl-3 space-x-4">
                                         <!-- <img src="../../../front/images/avatars/avatar-2.jpg" style="width: 40px; height: 40px;" class="rounded-full"> -->
                                         <div class="flex-1">
-                                            <!-- <h3 class="text-lg font-semibold line-clamp-1"> -->
+                                            <table>
+                                                <tr>
+                                                    <td><img src="../../../newpan.png" alt="" class="logo_mobile w-32"> </td>
+                                                    <td style="padding-top: 14px;"><b>PANİPAL</b></td>
+                                                </tr>
+                                            </table>                                        
                                             <h3 class="text-lg font-semibold">
                                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis quasi adipisci distinctio alias harum corrupti aut laudantium pariatur, culpa voluptatibus, dolorum repellat explicabo.
                                             </h3>
