--- a/views/front/bildirim.ejs
+++ b/views/front/bildirim.ejs
@@ -16,7 +16,7 @@
                                             <table>
                                                 <tr>
                                                     <td><img src="../../../newpan.png" alt="" class="logo_mobile w-32"> </td>
-                                                    <td style="padding-top: 14px;"><b>PANİPAL</b></td>
+                                                    <td style="padding-top: 15px;"></td>
                                                 </tr>
                                             </table>                                        
                                             <h3 class="text-lg font-semibold">
