--- a/views/front/layout.ejs
+++ b/views/front/layout.ejs
@@ -170,7 +170,7 @@
                                                     <img src="../../../paylas.png" height="30px">
     
                                                 </a>
-                                                <a href="#" class="is_icon">
+                                                <a href="/bildirim" class="is_icon">
                                                     <svg id="Layer_1" enable-background="new 0 0 512 512" height="512"
                                                         viewBox="0 0 512 512" width="512"
                                                         xmlns="http://www.w3.org/2000/svg">
