--- a/views/front/magaza.ejs
+++ b/views/front/magaza.ejs
@@ -5,7 +5,7 @@
             <div class="card" style="width: 50%; border-radius: 20px;">
                 <div class="card-media h-44">
                     <div class="card-media-overly"></div>
-                    <img src="../../../front/images/product/1.jpg" alt="" style="border-radius: 20px;">
+                    <a href="/magazaic"><img src="../../../front/images/product/1.jpg" alt="" style="border-radius: 20px;"></a>
                     <span class="absolute bg-white px-2 py-1 text-sm rounded-md m-2"> Label</span>
                 </div>
                 <div class="card-body">
