--- a/views/front/layout.ejs
+++ b/views/front/layout.ejs
@@ -153,7 +153,7 @@
                                             </svg> Çıkış Yap
                                         </a>
                                     </div> -->
-                                                <a href="#" id="gizle" class="is_icon">
+                                                <a href="/magaza" id="gizle" class="is_icon">
                                                     <ion-icon name="camera-outline" style="color: gray;" class="text-4xl"></ion-icon>
                                                 </a>
                                                 <a href="#" id="gizle" class="is_icon"
