--- a/views/front/mesaj.ejs
+++ b/views/front/mesaj.ejs
@@ -2,19 +2,21 @@
     <div class="main_content">
         <div class="mcontainer">
             <% for( let index = 0; index < 10; index++ ) { %>
-                <span class="badge">
-                    <table>
-                        <tr>
-                            <td style="width: 60px;"> <img src="https://via.placeholder.com/50" style="height: 50px; border-radius: 100px;"> </td>
-                            <td>
-                                <h3 class="text-2xl font-semibold"> <a href="">Ad Soyad</a>
-                                </h3>
-                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
-                            </td>
-                        </tr>
-                    </table>
-                    <hr style="margin-top: 10px;">
-                </span>
+                <a href="/mesajic">
+                    <span class="badge">
+                        <table>
+                            <tr>
+                                <td style="width: 60px;"> <img src="https://via.placeholder.com/50" style="height: 50px; border-radius: 100px;"> </td>
+                                <td>
+                                    <h3 class="text-2xl font-semibold"> <a href="">Ad Soyad</a>
+                                    </h3>
+                                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                                </td>
+                            </tr>
+                        </table>
+                        <hr style="margin-top: 10px;">
+                    </span>
+                </a>
             <% } %>
         </div>
     </div>
