--- a/views/front/layout.ejs
+++ b/views/front/layout.ejs
@@ -170,7 +170,7 @@
                                                     </svg>
                                                 </a>
                                                 <a href="/mesaj" class="is_icon">
-                                                    <ion-icon style="margin-top: -2px;" class="text-2xl" name="chatbubble-outline"></ion-icon>
+                                                    <ion-icon style="margin-top: -2px; color: gray;" class="text-3xl" name="chatbubble-outline"></ion-icon>
                                                 </a>
     
                                 </div>
