--- a/views/front/magaza.ejs
+++ b/views/front/magaza.ejs
@@ -2,16 +2,29 @@
 
     <div class="main_content">
         <div class="mcontainer">
-            <div class="card" style="width: 50%; border-radius: 20px;">
-                <div class="card-media h-44">
-                    <div class="card-media-overly"></div>
-                    <a href="/magazaic"><img src="../../../front/images/product/1.jpg" alt="" style="border-radius: 20px;"></a>
-                    <span class="absolute bg-white px-2 py-1 text-sm rounded-md m-2"> Label</span>
-                </div>
-                <div class="card-body">
-                    <div class="text-xs font-semibold uppercase text-yellow-500">DENEME</div>
-                    <div class="ext-lg font-medium mt-1 t truncate"> Örnek yazı </div>
-                </div>
-            </div>
+            <table>
+                <% for( let index = 0; index < 1; index++ ) { %>
+                    <tr style="margin-top: 10vh;">
+                        <td>
+                            <div class="card-media h-44">
+                                <div class="card-media-overly"></div>
+                                <a href="/magazaic"><img src="../../../front/images/product/1.jpg" style="border-radius: 20px; height: 28vh; width: 28vh;"></a>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="card-media h-44">
+                                <div class="card-media-overly"></div>
+                                <a href="/magazaic"><img src="../../../front/images/product/1.jpg" style="border-radius: 20px; height: 28vh; width: 28vh;"></a>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="card-media h-44">
+                                <div class="card-media-overly"></div>
+                                <a href="/magazaic"><img src="../../../front/images/product/1.jpg" style="border-radius: 20px; height: 28vh; width: 28vh;"></a>
+                            </div>
+                        </td>
+                    </tr>
+                <% } %>
+            </table>
         </div>
     </div>
