--- a/views/front/magaza.ejs
+++ b/views/front/magaza.ejs
@@ -9,18 +9,21 @@
                             <div class="card-media h-44">
                                 <div class="card-media-overly"></div>
                                 <a href="/magazaic"><img src="../../../front/images/product/1.jpg" style="border-radius: 20px; height: 28vh; width: 28vh;"></a>
+                                <span>Deneme</span>
                             </div>
                         </td>
                         <td>
                             <div class="card-media h-44">
                                 <div class="card-media-overly"></div>
                                 <a href="/magazaic"><img src="../../../front/images/product/1.jpg" style="border-radius: 20px; height: 28vh; width: 28vh;"></a>
+                                <span>Deneme</span>
                             </div>
                         </td>
                         <td>
                             <div class="card-media h-44">
                                 <div class="card-media-overly"></div>
                                 <a href="/magazaic"><img src="../../../front/images/product/1.jpg" style="border-radius: 20px; height: 28vh; width: 28vh;"></a>
+                                <span>Deneme</span>
                             </div>
                         </td>
                     </tr>
