--- a/views/front/magaza.ejs
+++ b/views/front/magaza.ejs
@@ -8,21 +8,21 @@
                         <td>
                             <div class="card-media h-44">
                                 <div class="card-media-overly"></div>
-                                <a href="/magazaic"><img src="../../../front/images/product/1.jpg" style="border-radius: 20px; height: 28vh; width: 28vh;"></a>
+                                <a href="/magazaic"><img src="http://izmirbilimkurgu.com/wp-content/uploads/2017/04/nikola-tesla-500x500.jpg" style="border-radius: 20px; height: 28vh; width: 28vh; max-width: 28vh; max-height: 28vh;"></a>
                                 <span>Deneme</span>
                             </div>
                         </td>
                         <td>
                             <div class="card-media h-44">
                                 <div class="card-media-overly"></div>
-                                <a href="/magazaic"><img src="../../../front/images/product/1.jpg" style="border-radius: 20px; height: 28vh; width: 28vh;"></a>
+                                <a href="/magazaic"><img src="http://izmirbilimkurgu.com/wp-content/uploads/2017/04/nikola-tesla-500x500.jpg" style="border-radius: 20px; height: 28vh; width: 28vh; max-width: 28vh; max-height: 28vh;"></a>
                                 <span>Deneme</span>
                             </div>
                         </td>
                         <td>
                             <div class="card-media h-44">
                                 <div class="card-media-overly"></div>
-                                <a href="/magazaic"><img src="../../../front/images/product/1.jpg" style="border-radius: 20px; height: 28vh; width: 28vh;"></a>
+                                <a href="/magazaic"><img src="http://izmirbilimkurgu.com/wp-content/uploads/2017/04/nikola-tesla-500x500.jpg" style="border-radius: 20px; height: 28vh; width: 28vh; max-width: 28vh; max-height: 28vh;"></a>
                                 <span>Deneme</span>
                             </div>
                         </td>
