--- a/views/front/magaza.ejs
+++ b/views/front/magaza.ejs
@@ -4,9 +4,9 @@
         <div class="mcontainer">
 
             <div style="display: flex;">
-                <img src="../../../front/images/product/1.jpg" style="flex-direction: row; flex: 1; border-radius: 20px; height: 25vh; width: 23vh; padding: 3px;">
-                <img src="../../../front/images/product/1.jpg" style="flex-direction: row; flex: 1; border-radius: 20px; height: 25vh; width: 23vh; padding: 3px;">
-                <img src="../../../front/images/product/1.jpg" style="flex-direction: row; flex: 1; border-radius: 20px; height: 25vh; width: 23vh; padding: 3px;">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/Tesla_circa_1890.jpeg/440px-Tesla_circa_1890.jpeg" style="flex-direction: row; flex: 1; border-radius: 20px; height: 25vh; width: 23vh; padding: 3px;">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/Tesla_circa_1890.jpeg/440px-Tesla_circa_1890.jpeg" style="flex-direction: row; flex: 1; border-radius: 20px; height: 25vh; width: 23vh; padding: 3px;">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/Tesla_circa_1890.jpeg/440px-Tesla_circa_1890.jpeg" style="flex-direction: row; flex: 1; border-radius: 20px; height: 25vh; width: 23vh; padding: 3px;">
             </div>
 <!-- 
             <table>
