--- a/views/front/mesajic.ejs
+++ b/views/front/mesajic.ejs
@@ -1,12 +1,10 @@
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
-
 <html>
 
 <head>
-
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" type="text/css"
         rel="stylesheet" </head>
 
@@ -75,7 +73,8 @@
                         <div class="input_msg_write">
                             <input type="text" class="write_msg" placeholder="Mesajınızı giriniz." />
                             <button class="msg_send_btn" type="button" style="background-color: #0091EA;">
-                                <ion-icon style="font-size: 19pt; margin-right: -4px;" name="checkmark-outline"></ion-icon>
+                                <ion-icon style="font-size: 19pt; margin-right: -4px;" name="checkmark-outline">
+                                </ion-icon>
                             </button>
                         </div>
                     </div>
