--- a/views/front/mesajicc.ejs
+++ b/views/front/mesajicc.ejs
@@ -22,7 +22,7 @@
                             </a>
                         </div>
                         <div class="chat-body">
-                            <div class="chat-content">
+                            <div class="chat-content" style="border-radius: 40px;">
                                 <p>
                                     Lorem ipsum dolor sit amet consectetur.
                                 </p>
@@ -38,7 +38,7 @@
                             </a>
                         </div>
                         <div class="chat-body">
-                            <div class="chat-content">
+                            <div class="chat-content" style="border-radius: 40px;">
                                 <p>Lorem ipsum dolor sit amet consectetur.</p>
                             </div>
                         </div>
@@ -52,7 +52,7 @@
                             </a>
                         </div>
                         <div class="chat-body">
-                            <div class="chat-content">
+                            <div class="chat-content" style="border-radius: 40px;">
                                 <p>
                                     Lorem ipsum dolor sit amet consectetur.
                                 </p>
@@ -67,7 +67,7 @@
                     <div class="input-group">
                         <input type="text" class="form-control" placeholder="Mesajınız giriniz..">
                         <span class="input-group-btn">
-                            <button class="btn btn-primary" type="button"> <i class="fa fa-send fa-2x"></i> </button>
+                            <button class="btn btn-primary" style="border-radius: 100px;" type="button"> <i class="fa fa-send fa-2x"></i> </button>
                         </span>
                     </div>
                 </form>
