--- a/views/front/mesajicc.ejs
+++ b/views/front/mesajicc.ejs
@@ -79,10 +79,11 @@
                     <hr>
                     <form>
                         <div class="input-group">
-                            <input type="text" class="form-control" placeholder="Mesajınız giriniz..">
+                            <input type="text" style="border-radius: 100px;" class="form-control" placeholder="Mesajınız giriniz..">
                             <span class="input-group-btn">
-                                <button class="btn btn-primary" style="border-radius: 100px;" type="button"> <i
-                                        class="fa fa-send fa-2x"></i> </button>
+                                <button class="btn" style="border-radius: 100px;" type="button"> 
+                                    <i class="fa fa-chevron-right fa-2x" style="color: #62a8ea;"></i> 
+                                </button>
                             </span>
                         </div>
                     </form>
