--- a/views/front/mesaj.ejs
+++ b/views/front/mesaj.ejs
@@ -8,7 +8,7 @@
                             <tr>
                                 <td style="width: 60px;"> <img src="https://via.placeholder.com/50" style="height: 50px; border-radius: 100px;"> </td>
                                 <td>
-                                    <h3 class="text-2xl font-semibold"> <a href="">Ad Soyad</a>
+                                    <h3 class="text-2xl font-semibold"> <a href="/mesajic">Ad Soyad</a>
                                     </h3>
                                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
                                 </td>
