--- a/views/front/magaza.ejs
+++ b/views/front/magaza.ejs
@@ -4,16 +4,41 @@
         <div class="mcontainer">
 
             <div style="display: flex;">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/Tesla_circa_1890.jpeg/440px-Tesla_circa_1890.jpeg" style="flex-direction: row; flex: 1; border-radius: 20px; height: 25vh; width: 23vh; padding: 3px; object-fit: cover;">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/Tesla_circa_1890.jpeg/440px-Tesla_circa_1890.jpeg" style="flex-direction: row; flex: 1; border-radius: 20px; height: 25vh; width: 23vh; padding: 3px; object-fit: cover;">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/Tesla_circa_1890.jpeg/440px-Tesla_circa_1890.jpeg" style="flex-direction: row; flex: 1; border-radius: 20px; height: 25vh; width: 23vh; padding: 3px; object-fit: cover;">
+                <span class="text-center">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/Tesla_circa_1890.jpeg/440px-Tesla_circa_1890.jpeg"
+                        style="flex-direction: row; flex: 1; border-radius: 20px; height: 25vh; width: 23vh; padding: 3px; object-fit: cover;">
+                    asdasd
+                </span>
+                <span class="text-center">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/Tesla_circa_1890.jpeg/440px-Tesla_circa_1890.jpeg"
+                        style="flex-direction: row; flex: 1; border-radius: 20px; height: 25vh; width: 23vh; padding: 3px; object-fit: cover;">
+                    asdasd
+                </span>
+                <span class="text-center">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/Tesla_circa_1890.jpeg/440px-Tesla_circa_1890.jpeg"
+                        style="flex-direction: row; flex: 1; border-radius: 20px; height: 25vh; width: 23vh; padding: 3px; object-fit: cover;">
+                    asdasd
+                </span>
+
             </div>
             <div style="display: flex;">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Einstein_1921_by_F_Schmutzer_-_restoration.jpg/500px-Einstein_1921_by_F_Schmutzer_-_restoration.jpg" style="flex-direction: row; flex: 1; border-radius: 20px; height: 25vh; width: 23vh; padding: 3px; object-fit: cover;">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Einstein_1921_by_F_Schmutzer_-_restoration.jpg/500px-Einstein_1921_by_F_Schmutzer_-_restoration.jpg" style="flex-direction: row; flex: 1; border-radius: 20px; height: 25vh; width: 23vh; padding: 3px; object-fit: cover;">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Einstein_1921_by_F_Schmutzer_-_restoration.jpg/500px-Einstein_1921_by_F_Schmutzer_-_restoration.jpg" style="flex-direction: row; flex: 1; border-radius: 20px; height: 25vh; width: 23vh; padding: 3px; object-fit: cover;">
+                <span class="text-center">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Einstein_1921_by_F_Schmutzer_-_restoration.jpg/500px-Einstein_1921_by_F_Schmutzer_-_restoration.jpg"
+                    style="flex-direction: row; flex: 1; border-radius: 20px; height: 25vh; width: 23vh; padding: 3px; object-fit: cover;">
+                    Deneme
+                </span>
+                <span class="text-center">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Einstein_1921_by_F_Schmutzer_-_restoration.jpg/500px-Einstein_1921_by_F_Schmutzer_-_restoration.jpg"
+                    style="flex-direction: row; flex: 1; border-radius: 20px; height: 25vh; width: 23vh; padding: 3px; object-fit: cover;">
+                    Deneme
+                </span>
+                <span class="text-center">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Einstein_1921_by_F_Schmutzer_-_restoration.jpg/500px-Einstein_1921_by_F_Schmutzer_-_restoration.jpg"
+                    style="flex-direction: row; flex: 1; border-radius: 20px; height: 25vh; width: 23vh; padding: 3px; object-fit: cover;">
+                    Deneme
+                </span>
             </div>
-<!-- 
+            <!-- 
             <table>
                 <% for( let index = 0; index < 1; index++ ) { %>
                     <tr style="margin-top: 10vh;">
