--- a/views/front/magaza.ejs
+++ b/views/front/magaza.ejs
@@ -4,17 +4,17 @@
         <div class="mcontainer">
 
             <div style="display: flex;">
-                <span class="text-center">
+                <span>
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/Tesla_circa_1890.jpeg/440px-Tesla_circa_1890.jpeg"
                         style="flex-direction: row; flex: 1; border-radius: 20px; height: 25vh; width: 23vh; padding: 3px; object-fit: cover;">
                     asdasd
                 </span>
-                <span class="text-center">
+                <span>
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/Tesla_circa_1890.jpeg/440px-Tesla_circa_1890.jpeg"
                         style="flex-direction: row; flex: 1; border-radius: 20px; height: 25vh; width: 23vh; padding: 3px; object-fit: cover;">
                     asdasd
                 </span>
-                <span class="text-center">
+                <span>
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/Tesla_circa_1890.jpeg/440px-Tesla_circa_1890.jpeg"
                         style="flex-direction: row; flex: 1; border-radius: 20px; height: 25vh; width: 23vh; padding: 3px; object-fit: cover;">
                     asdasd
@@ -22,17 +22,17 @@
 
             </div>
             <div style="display: flex;">
-                <span class="text-center">
+                <span>
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Einstein_1921_by_F_Schmutzer_-_restoration.jpg/500px-Einstein_1921_by_F_Schmutzer_-_restoration.jpg"
                     style="flex-direction: row; flex: 1; border-radius: 20px; height: 25vh; width: 23vh; padding: 3px; object-fit: cover;">
                     Deneme
                 </span>
-                <span class="text-center">
+                <span>
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Einstein_1921_by_F_Schmutzer_-_restoration.jpg/500px-Einstein_1921_by_F_Schmutzer_-_restoration.jpg"
                     style="flex-direction: row; flex: 1; border-radius: 20px; height: 25vh; width: 23vh; padding: 3px; object-fit: cover;">
                     Deneme
                 </span>
-                <span class="text-center">
+                <span>
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Einstein_1921_by_F_Schmutzer_-_restoration.jpg/500px-Einstein_1921_by_F_Schmutzer_-_restoration.jpg"
                     style="flex-direction: row; flex: 1; border-radius: 20px; height: 25vh; width: 23vh; padding: 3px; object-fit: cover;">
                     Deneme
