--- a/views/front/magazaic.ejs
+++ b/views/front/magazaic.ejs
@@ -5,7 +5,7 @@
             <div class="card" style="border-radius: 20px;">
                 <div style="height: 380px;" class="card-media h-44">
                     <div class="card-media-overly"></div>
-                    <img src="../../../front/images/product/1.jpg" alt="" style="border-radius: 20px;">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/Tesla_circa_1890.jpeg/440px-Tesla_circa_1890.jpeg" style="border-radius: 20px; object-fit: cover;">
                     <span class="absolute bg-white px-2 py-1 text-sm rounded-md m-2"> Label</span>
                 </div>
                 <div class="card-body">
