--- a/views/front/magazaic.ejs
+++ b/views/front/magazaic.ejs
@@ -8,6 +8,23 @@
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/Tesla_circa_1890.jpeg/440px-Tesla_circa_1890.jpeg" style="border-radius: 20px; object-fit: cover;">
                     <span class="absolute bg-white px-2 py-1 text-sm rounded-md m-2"> Label</span>
                 </div>
+                <table>
+                    <tr>
+                        <td><div class="profile_avatar">
+                            <div class="profile_avatar_holder">
+                                <img src="../../../front/images/avatars/avatar-8.jpg" style="border-radius: 75px; height: 75px; width: 75px;">
+                            </div>
+                            <div class="user_status status_online"></div>
+                            <div class="icon_change_photo" hidden>
+                                <ion-icon name="camera" class="text-xl"></ion-icon>
+                            </div>
+                        </div></td>
+                        <td style="width: 65vw;">
+                            <h3 class="text-lg font-semibold" style=" text-align: right;"> <ion-icon style="margin-top: -2px;" class="text-2xl" name="chatbubble-outline"></ion-icon> | <span style="color: crimson;">ABONE OL</span> </h3>
+                        </h3>
+                    </td>
+                    </tr>
+                </table>
                 <div class="card-body">
                     <div class="text-xs font-semibold uppercase text-yellow-500">DENEME</div>
                     <div class="ext-lg font-medium mt-1 t"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid temporibus ipsa totam! Molestias fugiat ad soluta, laudantium cumque illum dolorem, perspiciatis optio excepturi, maxime a sit beatae enim cum nisi.</div>
