--- a/views/front/profil.ejs
+++ b/views/front/profil.ejs
@@ -15,9 +15,7 @@
                                 </div>
                             </div></td>
                             <td style="width: 65vw;">
-                                <h3 class="text-lg font-semibold"
-                                                    style=" text-align: right;"> <ion-icon style="margin-top: -2px;" class="text-2xl" name="chatbubble-outline"></ion-icon> | <span style="color: crimson;">ABONE OL</span> 
-                                                </h3>
+                                <h3 class="text-lg font-semibold" style=" text-align: right;"> <ion-icon style="margin-top: -2px;" class="text-2xl" name="chatbubble-outline"></ion-icon> | <span style="color: crimson;">ABONE OL</span> </h3>
                             </h3>
                         </td>
                         </tr>
