--- a/views/front/magaza.ejs
+++ b/views/front/magaza.ejs
@@ -78,4 +78,46 @@
                 <% } %>
             </table> -->
         </div>
+        <a @click="konuEkle()" style="color: white;" hidden class="bg-blue-600 flex h-9 items-center justify-center rounded-lg text-white px-12 font-semibold">
+            Paylaş </a>
+        <div id="create-post-modal" class="create-post" uk-modal>
+            <div class="uk-modal-dialog uk-modal-body uk-margin-auto-vertical rounded-lg p-0 lg:w-5/12 relative shadow-2xl uk-animation-slide-bottom-small">
+
+                <div class="text-center py-4 border-b" v-if="yyy == null">
+                    <h3 class="text-lg font-semibold"> Kütüphaneye ekleme yapıyorsunuz. </h3>
+                    <button class="uk-modal-close-default bg-gray-100 rounded-full p-2.5 m-1 right-2" type="button" uk-close uk-tooltip="title: Close ; pos: bottom ;offset:7"></button>
+                </div>
+                <div class="text-center py-4 border-b" style="background-color: #03A9F4" v-if="yyy == true">
+                    <h3 class="text-lg font-semibold" style="color: white;"> Yorumunuz başarıyla eklendi. </h3>
+                    <!-- <button class="uk-modal-close-default bg-gray-100 rounded-full p-2.5 m-1 right-2" type="button" uk-close uk-tooltip="title: Close ; pos: bottom ;offset:7"></button> -->
+                </div>
+                <div class="flex flex-1 items-start space-x-4 p-5">
+                    <!-- <img src="../../../front/images/avatars/avatar-2.jpg" class="bg-gray-200 border border-white rounded-full w-11 h-11"> -->
+                    <div class="flex-1 pt-1" style="border-radius: 20px;">
+                        <input type="file" class="uk-textare text-black shadow-none focus:shadow-none text-xl font-medium resize-none"  placeholder="Başlık">
+                        <hr>
+                        <input v-model="title" class="uk-textare text-black shadow-none focus:shadow-none text-xl font-medium resize-none"  placeholder="Başlık">
+                        <hr>
+                        <textarea class="uk-textare text-black shadow-none focus:shadow-none text-xl font-medium resize-none" rows="14"  placeholder="Açıklama"></textarea>
+                    </div>
+                </div>
+                
+                <!-- <div class="bsolute bottom-0 p-4 space-x-4 w-full">
+                    <ion-icon name="link-outline" class="text-3xl" style="padding-left: 10px;"></ion-icon>
+                    <ion-icon name="book-outline" class="text-3xl" style="padding-left: 10px;"></ion-icon>
+                </div> -->
+                <!-- <div class="flex items-center w-full justify-between p-3 border-t">
+                    <div class="flex space-x-2">
+
+                        <!-- <a @click="konuEkle()" style="color: white;" class="bg-blue-600 flex h-9 items-center justify-center rounded-md text-white px-5 font-medium">
+                          Paylaş </a> -->
+                          <!-- <img @click="konuEkle()" style="height: 30px;" src="../../paylas.png" class=""> -->
+                    <!-- </div> -->
+
+                    <!-- <a @click="konuEkle()" style="color: white;" hidden class="bg-blue-600 flex h-9 items-center justify-center rounded-lg text-white px-12 font-semibold">
+                        Paylaş </a> -->
+                        <!-- <img @click="konuEkle()" hidden style="height: 30px;" src="../../paylas.png" class=""> -->
+                <!-- </div>  -->
+            </div>
+        </div>
     </div>
