--- a/views/front/magazaic.ejs
+++ b/views/front/magazaic.ejs
@@ -11,17 +11,20 @@
                 <br>
                 <table>
                     <tr>
-                        <td><div class="profile_avatar">
+                        <td>
+                            <div class="profile_avatar">
                             <div class="profile_avatar_holder">
-                                <img src="../../../front/images/avatars/avatar-8.jpg" style="border-radius: 75px; height: 75px; width: 75px;">
+                                <img src="../../../front/images/avatars/avatar-8.jpg" style="border-radius: 75px; height: 50px; width: 50px;"> 
                             </div>
+                            
                             <div class="user_status status_online"></div>
                             <div class="icon_change_photo" hidden>
                                 <ion-icon name="camera" class="text-xl"></ion-icon>
                             </div>
-                        </div></td>
+                        </div>
+                    </td>
                         <td style="width: 65vw;">
-                            <h3 class="text-lg font-semibold" style=" text-align: right;"> <ion-icon style="margin-top: -2px;" class="text-2xl" name="chatbubble-outline"></ion-icon> | <span style="color: crimson;">ABONE OL</span> </h3>
+                            <h3 class="text-lg font-semibold" style=" text-align: right;"> <ion-icon style="margin-top: -2px;" class="text-2xl" name="chatbubble-outline"></ion-icon> | <span style="color: crimson;">ABONE OL</span> </h3>
                         </h3>
                     </td>
                     </tr>
