--- a/views/front/profil.ejs
+++ b/views/front/profil.ejs
@@ -38,7 +38,7 @@
                             <li class="active"><a href="#0"> Raf</a></li>
                             <li><a href="#0">Yorumlar </a></li>
                             <li><a href="#0">Beğeniler </a></li>
-                            <li><a href="#0">İstatistik </a></li>
+                            <!-- <li><a href="#0">İstatistik </a></li> -->
                         </ul>
                     </nav>
                 </div>
