--- a/views/front/profil.ejs
+++ b/views/front/profil.ejs
@@ -1,4 +1,13 @@
 <% layout("layout") %>
+<style>
+	img{
+		max-width:180px;
+	}
+	input[type=file]{
+		padding:10px;
+		background:#2d2d2d;
+	}
+</style>
     <div class="main_content">
         <div class="mcontainer">
             <div class="bg-white rounded-2xl -mt-4"> 
@@ -6,9 +15,14 @@
                     <table>
                         <tr>
                             <td><div class="profile_avatar">
-                                <div class="profile_avatar_holder">
-                                    <img src="../../../front/images/avatars/avatar-8.jpg" style="border-radius: 75px; height: 75px; width: 75px;">
+                                <div class="profile_avatar_holder image-upload">
+                                    <label for="file-input">
+
+                                    <img id="blah" src="../../../front/images/avatars/avatar-8.jpg" style="border-radius: 75px; height: 75px; width: 75px; max-height: 75px;
+                                    max-width: 75px; object-fit: cover;">
+                                    </label>
                                 </div>
+                                <input id="file-input" type='file' onchange="readURL(this);" style="display: none;"/>
                                 <div class="user_status status_online"></div>
                                 <div class="icon_change_photo" hidden>
                                     <ion-icon name="camera" class="text-xl"></ion-icon>
@@ -155,3 +169,29 @@
 
         </div>
     </div>
+
+
+    <script>
+        function readURL(input) {
+            console.log(input.files[0])
+            if (input.files && input.files[0]) {
+                var reader = new FileReader();
+    
+                reader.onload = function (e) {
+                    console.log(e.target.result)
+                    axios.post("http://localhost:4005/image", {
+                        image: e.target.result,
+                        pid: "asdasdasdasd"
+                    }).then((response) => {
+                        alert(response)
+                    })
+                    $('#blah')
+                        .attr('src', e.target.result)
+                        .width(300)
+                        .height(300);
+                };
+    
+                reader.readAsDataURL(input.files[0]);
+            }
+        }
+    </script>
