--- a/views/front/bildirim.ejs
+++ b/views/front/bildirim.ejs
@@ -1,4 +1,6 @@
 <% layout("layout") %>
+<%- include ./part/header2.ejs %> 
+
     <div class="main_content">
         <br>
         <div class="mcontainer" style="margin:5px;">
