--- a/views/front/duzenle.ejs
+++ b/views/front/duzenle.ejs
@@ -9,6 +9,8 @@
             background: #2d2d2d;
         }
     </style>
+    <%- include ./part/header2.ejs %> 
+
     <div class="main_content">
         <div class="mcontainer">
             <div class="bg-white rounded-2xl -mt-4">
