--- a/views/front/etiket.ejs
+++ b/views/front/etiket.ejs
@@ -12,6 +12,8 @@
             }
         }
     </style>
+    <%- include ./part/header2.ejs %> 
+
     <div class="main_content" id="app">
         <div class="container">
             <div class="lg:flex lg:space-y-10">
