--- a/views/front/index.ejs
+++ b/views/front/index.ejs
@@ -14,6 +14,8 @@
 
         
     </style>
+            <%- include ./part/header.ejs %> 
+
     <div class="main_content">
         <div class="container">
             <div class="lg:flex lg:space-y-10">
