--- a/views/front/mesaj.ejs
+++ b/views/front/mesaj.ejs
@@ -1,4 +1,6 @@
 <% layout("layout") %>
+<%- include ./part/header2.ejs %> 
+
     <div class="main_content">
         <div class="mcontainer">
             <% for( let index = 0; index < 10; index++ ) { %>
