--- a/views/front/myprofile.ejs
+++ b/views/front/myprofile.ejs
@@ -1,4 +1,6 @@
 <% layout("layout") %>
+<%- include ./part/header2.ejs %> 
+
     <div class="main_content">
         <div class="mcontainer">
             <div class="bg-white rounded-2xl -mt-4"> 
